# TkZinc

./: .gitignore  .hg_archival.txt  Makefile.in  README  README.md  aclocal.m4  bootstrap  configure  configure.in  starkit.tcl.in  tkzinc.m4
Perl/: .cvsignore  Makefile.PL  README  Zinc.pm  Zinc.xs  export2cpan
Perl/Zinc/: Debug.pm  Graphics.pm  Logo.pm  Text.pm  Trace.pm  TraceErrors.pm  TraceUtils.pm
Perl/demos/: zinc-demos
Perl/t/: AnimatedGradient.t  Bbox-curve-multi-contour.t  Bbox.t  Coords.t  Images.t  Import.t  Maps.t  PreviousKnownBugs.t  Scale_clipped_group.t  TestLog.pm  Text.t  Text2.t  Transformations.t  find.t  test-methods.pl  test-no-crash.pl  testdoc.pl  traceutils.t
Perl/t/Test/: Harness.pm
Perl/t/Test/Harness/: Straps.pm
Python/: setup.py
Python/demos/: testGraphics.py
debian/: .cvsignore  README.debian  changelog  control  copyright  rules  zinc-python.postinst  zinc-python.prerm
demos/: allOptions.tcl  atomicGroups.tcl  clipping.tcl  colorCircular.tcl  colorX.tcl  colorY.tcl  contours.tcl  curveBezier.tcl  fillRule.tcl  groupsInAtcStrips.tcl  groupsPriority.tcl  iconTransform.tcl  items.tcl  labelformat.tcl  lines.tcl  magicLens.tcl  pathTags.tcl  photoAlpha.tcl  reliefs.tcl  simpleInteractionTrack.tcl  simpleRadar.tcl  testGraphics.tcl  textInput.tcl  tiger.tcl  tkZincLogo.tcl  transforms.tcl  triangles.tcl  windowContours.tcl  zinc-widget
doc/: .cvsignore  index.html  refman.cfg  refman.tex
generic/: Arc.c  Attrs.c  Attrs.h  CharsetISO8859-15.h  Color.c  Color.h  Curve.c  Draw.c  Draw.h  Field.c  Field.h  Geo.c  Geo.h  Group.c  Group.h  Icon.c  Image.c  Image.h  Item.c  Item.h  List.c  List.h  Map.c  MapInfo.c  MapInfo.h  OverlapMan.c  OverlapMan.h  PostScript.c  PostScript.h  Rectangle.c  Reticle.c  Tabular.c  Text.c  Track.c  Track.h  Transfo.c  Transfo.h  Triangles.c  Types.h  Viewport.c  (+8 more)
macosx/: OSXPort.c
redhat/: changelog  perl-Tk-Zinc.spec  rules
sandbox/: Controls.pm  alledges.pl  allgradients.pl  allgradients.tcl  alllineshapes.pl  allreliefs.pl  allreliefs.tcl  bouton-down.xpm  bouton.xpm  conical.tcl  contours.tcl  controls.tcl  lines.pl  smooth.tcl  testarc.tcl  testbezier.pl  testbezier.tcl  testbitmaps.tcl  testicon.tcl  testplug.pl  testpoly.tcl  testrect.pl  testrelief.pl  testrelief.tcl  testshape.pl  testshape.tcl  testtext.tcl  testwind.tcl  testzinc.pl  textexpand.tcl  texture-bois1.xpm  texture-paper.xpm  triangles.pl  zinc.tcl  zinc.test
starkit/: demo.tcl  main.tcl
tclconfig/: tcl.m4  teax.m4
tests/: all.tcl  rectangle.test
win/: Copyright.rtf  Tkzinc.iss  Tkzinc.wxs.in  WinPort.c  makefile.vc.in  package.tcl
zinclib.d/: Copyright  INSTALL  README  doxyConfig  gen.pl  makefile.vc
zinclib.d/doc/: HOWTO
zinclib.d/doc/html/: ZincExtern_8hpp-source.html  ZincExtern_8hpp.html  ZincInternal_8hpp-source.html  ZincInternal_8hpp.html  ZincObjects_8cpp.html  ZincObjects_8hpp-source.html  ZincObjects_8hpp.html  ZincPath_8cpp.html  ZincPath_8hpp-source.html  ZincPath_8hpp.html  ZincTypes_8hpp-source.html  ZincTypes_8hpp.html  Zinc_8cpp.html  Zinc_8hpp-source.html  Zinc_8hpp.html  annotated.html  classZinc-members.html  classZinc.html  classZincBitmap-members.html  classZincBitmap.html  classZincException-members.html  classZincException.html  classZincFont-members.html  classZincFont.html  classZincImage-members.html  classZincImage.html  classZincItem-members.html  classZincItem.html  classZincPath-members.html  classZincPath.html  classes.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  (+7 more)
zinclib.d/src/: Zinc.cpp  Zinc.hpp  ZincExtern.hpp  ZincInternal.hpp  ZincObjects.cpp  ZincObjects.hpp  ZincPath.cpp  ZincPath.hpp  ZincTypes.hpp
zinclib.d/test/: itemconf.cpp  items.cpp  runtests.sh  test.cpp  widget.cpp
